# cv_vlabs

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  todo.md
config/: config.py  tags_metadata.py
docs/: torch_readme.md  torch_requirements.txt
server/routes/v1/: detection.py  healthcheck.py
server/utils/: device.py  enumerations.py  timing.py
settings/: .env_all  .env_example  .env_production  .env_sandbox
