[tool.poetry]
name = "cv-server"
version = "0.1.0"
description = ""
authors = ["ruslaniv <r.ishtuganov@gmail.com>"]
readme = "README.md"
packages = [{include = "cv_server"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
